[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Explosions/EX_23_Bomb_Man.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Explosions/Ex-23-Bomb_Man.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Line",
"speed": 10.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Long_End",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Mid",
"speed": 10.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Short_End",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 54, 14 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 54, 14 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 14, 54 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 14, 54 )

[node name="Ex_23_Bomb_Man" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 12 )
animation = "Mid"
frame = 1
playing = true

[node name="Up" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Up"]
position = Vector2( 0, -32 )
rotation = 1.5708
frames = SubResource( 12 )
animation = "Line"
frame = 1
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Up"]
position = Vector2( 0, -64 )
rotation = 1.5708
frames = SubResource( 12 )
animation = "Line"
frame = 1
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Up"]
position = Vector2( 0, -96 )
rotation = 1.5708
frames = SubResource( 12 )
animation = "Long_End"
frame = 1
playing = true

[node name="Down" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Down"]
position = Vector2( 0, 32 )
rotation = -1.5708
frames = SubResource( 12 )
animation = "Line"
frame = 1
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Down"]
position = Vector2( 0, 64 )
rotation = -1.5708
frames = SubResource( 12 )
animation = "Line"
frame = 1
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Down"]
position = Vector2( 0, 96 )
rotation = -1.5708
frames = SubResource( 12 )
animation = "Long_End"
frame = 1
playing = true

[node name="Left" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Left"]
position = Vector2( -32, 0 )
frames = SubResource( 12 )
animation = "Line"
frame = 1
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Left"]
position = Vector2( -64, 0 )
frames = SubResource( 12 )
animation = "Line"
frame = 1
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Left"]
position = Vector2( -96, 0 )
frames = SubResource( 12 )
animation = "Long_End"
frame = 1
playing = true

[node name="Right" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Right"]
position = Vector2( 32, 0 )
frames = SubResource( 12 )
animation = "Line"
frame = 1
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Right"]
position = Vector2( 64, 0 )
frames = SubResource( 12 )
animation = "Line"
frame = 1
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Right"]
position = Vector2( 96, 0 )
rotation = 3.14159
frames = SubResource( 12 )
animation = "Long_End"
frame = 1
playing = true

[node name="RayCasts" type="Node2D" parent="."]
visible = false

[node name="RayCast2D_Down" type="RayCast2D" parent="RayCasts"]
cast_to = Vector2( 0, 112 )

[node name="RayCast2D_Up" type="RayCast2D" parent="RayCasts"]
cast_to = Vector2( 0, -112 )

[node name="RayCast2D_Right" type="RayCast2D" parent="RayCasts"]
cast_to = Vector2( 112, 0 )

[node name="RayCast2D_Left" type="RayCast2D" parent="RayCasts"]
cast_to = Vector2( -112, 0 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -54, 0 )
shape = SubResource( 13 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 54, 0 )
shape = SubResource( 14 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 54 )
shape = SubResource( 15 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -54 )
shape = SubResource( 16 )
